Started recreating site layout

--- a/index.html
+++ b/index.html
@@ -19,53 +19,46 @@
 <body>
     <div id="container">
         <div id="logo-nav-column">
-            <img src="images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo'">
+            <img class="logo" src="images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo'">
             <nav>
                 <ul>
                     <li>
                         <div>
-                            <a href="/about">ABOUT</a>
+                            <a href="#">ABOUT</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="/portfolio">PORTFOLIO</a>
+                            <a href="#">PORTFOLIO</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="/contact">CONTACT</a>
+                            <a href="#">CONTACT</a>
                         </div>
                     </li>
                 </ul>
             </nav>
         </div>
         <div id="header-main-column">
-            <header id="header">
+            <header>
                 <div></div>
                 <hgroup>
-                    <h1>MATTHEW BRUBAKER SMITH</h1>
-                    <h2>WEB DEVELOPER • GRAPHIC DESIGNER</h2>
+                    <h1><span>MATTHEW</span> <span>BRUBAKER</span> <span>SMITH</span></h1>
+                    <h2><span>WEB DEVELOPER</span> <span>•</span> <span>GRAPHIC DESIGNER</span></h2>
                 </hgroup>
             </header>
             <section id="about-page" class="page">
-                <div class="text-card">
-                    <div class="text-card-content">
-                        <h1>Title</h1>
-                        <div class="text-card-ribbon">
-                            <div class="text-card-subtitle">Accent</div>
-                        </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra nunc mauris, dignissim ullamcorper erat fermentum a. Ut venenatis ut ipsum maximus convallis. Curabitur non lacinia enim, in interdum quam. Cras in sapien risus. Phasellus vitae nisi ante. Aliquam erat volutpat. Nullam faucibus bibendum enim sit amet maximus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer et eleifend orci, quis dictum massa.
-                        </p>
-                    </div>
-                    <div class="text-card-ribbon-back"></div>
-                </div>
+                <div class="card" card-title="Title" card-accent="Accent" card-content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra nunc mauris, dignissim ullamcorper erat fermentum a. Ut venenatis ut ipsum maximus convallis. Curabitur non lacinia enim, in interdum quam. Cras in sapien risus. Phasellus vitae nisi ante. Aliquam erat volutpat. Nullam faucibus bibendum enim sit amet maximus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer et eleifend orci, quis dictum massa."></div>
             </section>
         </div>
     </div>
-    <footer id="footer">
-        FOOT'N
+    <footer>
+        <div class="footer-background"></div>
+        <div class="footer-content">
+            FOOTIN
+        </div>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
