Started writing faux navigation code

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
                 <ul>
                     <li>
                         <div>
-                            <a href="#">ABOUT</a>
+                            <a href="#" onclick="displayPage('about');">ABOUT</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="#">PORTFOLIO</a>
+                            <a href="#" onclick="displayPage('portfolio');">PORTFOLIO</a>
                         </div>
                     </li>
                     <li>
                         <div>
-                            <a href="#">CONTACT</a>
+                            <a href="#" onclick="displayPage('contact');">CONTACT</a>
                         </div>
                     </li>
                 </ul>
@@ -48,12 +48,12 @@
                     <h2><span>WEB DEVELOPER</span> <span>•</span> <span>GRAPHIC DESIGNER</span></h2>
                 </hgroup>
             </header>
-            <section id="about-page" class="page">
-                <div class="card" card-title="Title" card-accent="Accent" card-content="Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra nunc mauris, dignissim ullamcorper erat fermentum a. Ut venenatis ut ipsum maximus convallis. Curabitur non lacinia enim, in interdum quam. Cras in sapien risus. Phasellus vitae nisi ante. Aliquam erat volutpat. Nullam faucibus bibendum enim sit amet maximus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer et eleifend orci, quis dictum massa."></div>
+            <section id="page" class="page">
+                
             </section>
         </div>
     </div>
-    <footer>
+    <footer id="footer">
         <div class="footer-background"></div>
         <div class="footer-content">
             FOOTIN
