--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 ============================================
 ; Title: Matthew Brubaker Smith - Web Developer • Graphic Designer
 ; Author: Matthew Brubaker Smith
-; Date: 10 August 2018
+; Date: 23 August 2018
 ; Description: Portfolio website for- you guessed it! MATTHEWBRUBAKERSMITH!
 ;===========================================
 -->
@@ -15,73 +15,58 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <meta name="theme-color" content="#ffffff">
     <title>Matthew Brubaker Smith - Web Developer • Graphic Designer</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
-    <link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <link href="https://fonts.googleapis.com/css?family=Kanit:600i|Oswald:300|Scope+One" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
+    <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:400i" rel="stylesheet">
+    <link rel="stylesheet" href="css/_style.css">
 </head>
 <body>
-    <div id="container">
-        <div id="logo-nav-column">
-            <img id="logo" class="logo" src="images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo'">
-            <nav id="desktop-nav">
+    <div id="logo-and-nav" class="container">
+        <div>
+            <img id="logo" src="./images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo">
+            <nav>
+                <img id="mobile-menu-icon" src="/images/icons/menu-icon.svg" alt="Menu Button">
                 <ul id="nav-list">
                     <li id="about-link" class="nav-link">
-                        <div>
-                            <a href="#" onclick="displayPage('about');">ABOUT</a>
-                        </div>
+                        <div><a class="header-font" href="#about">About</a></div>
                     </li>
                     <li id="portfolio-link" class="nav-link">
-                        <div>
-                            <a href="#" onclick="displayPage('portfolio');">PORTFOLIO</a>
-                        </div>
+                        <div><a class="header-font" href="#portfolio">Portfolio</a></div>
                     </li>
                     <li id="contact-link" class="nav-link">
-                        <div>
-                            <a href="#" onclick="displayPage('contact');">CONTACT</a>
-                        </div>
+                        <div><a class="header-font" href="#contact">Contact</a></div>
                     </li>
                 </ul>
+                <img id="mobile-menu-close-icon" src="/images/icons/close-icon.svg" alt="Menu Close Button">
             </nav>
-            <div id="mobile-nav-button" onclick="toggleMobileNav()">
-                &#9776;
-            </div>
-        </div>
-        <div id="header-main-column">
-            <header>
-                <div></div>
-                <hgroup>
-                    <h1><span>MATTHEW</span> <span>BRUBAKER</span> <span>SMITH</span></h1>
-                    <h2><span>WEB DEVELOPER</span> <span>•</span> <span>GRAPHIC DESIGNER</span></h2>
-                </hgroup>
-            </header>
-            <section id="page" class="page">
-                
-            </section>
         </div>
     </div>
-    <footer id="footer">
-        <div class="footer-background"></div>
-        <div class="footer-content">
-            <ul class="footer-nav">
-                <li>
-                    <a href="#" id="footer-about-link" class="footer-link" onclick="displayPage('about');">About</a>
-                </li>
-                <li>
-                    <a href="#" id="footer-portfolio-link" class="footer-link" onclick="displayPage('portfolio');">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#" id="footer-contact-link" class="footer-link" onclick="displayPage('contact');">Contact</a>
-                </li>
-            </ul>
-            <p>
-                &copy; Matthew Brubaker Smith 
-                <span id="footer-year"></span>
-            </p>
+    <header class="container">
+        <div class="page-container">
+            <h1>Matthew Brubaker Smith</h1>
+            <h2>Web Developer • Graphic Designer</h2>
+        </div>
+    </header>
+    <div id="main" class="container"></div>
+    <footer>
+        <div class="container">
+            <div class="page-container">
+                <div class="skew-container">
+                    <div class="skew darkgray-background">
+                        <div class="skew-content">
+                            <p id="footer-copyright">&copy; Matthew Brubaker Smith </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/component.js"></script>
+    <script src="js/parser.js"></script>
+    <script src="js/router.js"></script>
+    <script src="js/mobile-menu.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
