Attempting to fix CSS file link issue

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:400i" rel="stylesheet">
-    <link rel="stylesheet" href="css/_style.css">
+    <link rel="stylesheet" href="/css/_style.css">
 </head>
 <body>
     <div id="logo-and-nav" class="container">
         <div>
-            <img id="logo" src="./images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo">
+            <img id="logo" src="/images/mbs-logo.svg" alt="Matthew Brubaker Smith's Logo">
             <nav>
                 <img id="mobile-menu-icon" src="/images/icons/menu-icon.svg" alt="Menu Button">
                 <ul id="nav-list">
