--- a/index.html
+++ b/index.html
@@ -20,7 +20,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png">
     <link rel="mask-icon" href="images/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed:400i" rel="stylesheet">
-    <link rel="stylesheet" href="/css/_style.css">
+    <link rel="stylesheet" href="/css/colors-and-fonts.css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/skew-container.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <link rel="stylesheet" href="/css/logo-and-nav.css">
+    <link rel="stylesheet" href="/css/portfolio.css">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
     <div id="logo-and-nav" class="container">
