Added UMLet diagrams

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="/css/logo-and-nav.css">
     <link rel="stylesheet" href="/css/portfolio.css">
     <link rel="stylesheet" href="/css/contact.css">
+    <link rel="stylesheet" href="/css/diagram.css">
 </head>
 <body>
     <div id="logo-and-nav" class="container">
@@ -62,6 +63,11 @@
                 <div class="skew-container">
                     <div class="skew darkgray-background">
                         <div class="skew-content">
+                            <ul class="footer-links">
+                                <li>
+                                    <a href="#diagrams">Diagrams</a>
+                                </li>
+                            </ul>
                             <p id="footer-copyright">&copy; Matthew Brubaker Smith </p>
                         </div>
                     </div>
