--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/css/portfolio.css">
     <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet" href="/css/diagram.css">
+    <link rel="stylesheet" href="/css/presentation.css">
 </head>
 <body>
     <div id="logo-and-nav" class="container">
@@ -66,6 +67,9 @@
                             <ul class="footer-links">
                                 <li>
                                     <a href="#diagrams">Diagrams</a>
+                                </li>
+                                <li>
+                                    <a href="#presentations">Presentations</a>
                                 </li>
                             </ul>
                             <p id="footer-copyright">&copy; Matthew Brubaker Smith </p>
