Added Assignment 2.2 and Updated 1.4. I also created a basic modal to allow users to better view diagrams.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="/css/contact.css">
     <link rel="stylesheet" href="/css/diagram.css">
     <link rel="stylesheet" href="/css/presentation.css">
+    <link rel="stylesheet" href="/css/modal.css">
 </head>
 <body>
     <div id="logo-and-nav" class="container">
@@ -79,10 +80,12 @@
             </div>
         </div>
     </footer>
+    <div id="modal" onclick="Modal.close()"></div>
     <script src="js/component.js"></script>
     <script src="js/parser.js"></script>
     <script src="js/router.js"></script>
     <script src="js/mobile-menu.js"></script>
+    <script src="js/modal.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
